--- a/src/components/Header/NavBar.css
+++ b/src/components/Header/NavBar.css
@@ -9,12 +9,25 @@
     font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
 }
 
+
+
 header{
+    z-index: 0;
     height: 100vh;
     min-height: 400px;
     background-size: cover;
     background-position: center;
     background-image: url("../../assets/background.jpg");
+    
+}
+
+@media (max-width: 600px) {
+    
+    header{
+        
+        min-height: 800px;
+        
+    }
 }
 
 .container-txt{
