--- a/src/components/EventItem/EventItem.css
+++ b/src/components/EventItem/EventItem.css
@@ -7,6 +7,14 @@
     font-weight: 500;
   }
 
+  .custom-circle {
+    width: 25px; 
+    height: 25px; 
+    background-color:#D9D9D9; 
+    border-radius: 50%; 
+    border: none; 
+  }
+
 
 .card-custom{
     border-radius: 20px 20px 20px 20px;
@@ -18,6 +26,8 @@
 }
 
 
+
+
 @media (max-width: 600px) {
     
     .card-custom{
@@ -27,3 +37,6 @@
         margin-bottom: 20px;
     }
 }
+
+
+
