--- a/src/components/Header/NavBar.css
+++ b/src/components/Header/NavBar.css
@@ -1,52 +1,69 @@
-.navbar-light .navbar-nav .nav-link{
+.navbar-light .navbar-nav .nav-link {
+  color: white;
+  font-size: 1.4rem;
+  font-family: inter, sans-serif;
+}
+
+.navbar-light .navbar-brand {
+  color: white;
+  font-size: 30px;
+  font-family: Cambria, Cochin, Georgia, Times, "Times New Roman", serif;
+}
+.nav-button {
+  font-family: inter, sans-serif;
+}
+.nav-link{
     color: white;
-    font-size: 1.4rem;
-} 
-
-.navbar-light .navbar-brand{
-    color:white;
-    font-size: 30px;
-    font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
 }
 
-
-
-header{
-    z-index: 0;
-    height: 100vh;
-    min-height: 400px;
-    background-size: cover;
-    background-position: center;
-    background-image: url("../../assets/background.jpg");
-    
+header {
+  z-index: 0;
+  height: 100vh;
+  min-height: 440px;
+  background-size: cover;
+  background-position: center;
+  background-image: url("../../assets/background.jpg");
 }
 
-@media (max-width: 600px) {
-    
-    header{
-        
-        min-height: 800px;
-        
-    }
-}
-
-.container-txt{
-padding-top: 15rem;
-
-}
-.container{
-    
-    top: 10%; 
-    
-    text-align: start; 
-  }
+.navbar {
+  z-index: 1; /* Adjust the z-index value as needed */
   
-  .container h1,
-  .container p {
-    color: white;
+}
+
+.container-txt {
+  position: absolute;
+  padding-top: 35rem;
+  top: 90%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  text-align: center;
+}
+
+.navcondition {
+  padding-top: 10rem;
+  padding-left: 10rem;
+}
+.container {
+  top: 10%;
+
+  text-align: start;
+}
+
+.container h1,
+.container p {
+  color: white;
+}
+
+@media (max-width: 700px) {
+  .container-txt {
+    padding-top: 49rem;
   }
+}
 
-  
 
- 
- 
+
+
+
+
+
+
