--- a/src/components/Club/Club.css
+++ b/src/components/Club/Club.css
@@ -3,13 +3,15 @@ padding: 80px 0;
 }
 
 .card-clud-custom {
-    box-shadow: 0 0 30px rgba(0,0,0,0.5);
+    
     overflow: hidden;
     border-radius: 15px;
   }
+
+  
   
   .cover img {
-    height: 200px;
+    height: 130px;
     border-top-right-radius: 15px;
     border-bottom-left-radius: 15px;
     width: 100%; 
@@ -20,12 +22,12 @@ padding: 80px 0;
     display: block;
     margin-left: auto;
     margin-right: auto;
-    margin-top: -80px;
+    margin-top: -50px;
     z-index: 1;
-    width: 140px;
-    height: 140px;
+    width: 90px;
+    height: 90px;
     border-radius: 50%;
-    border: 7px solid #fff;
+    border: none;
   }
 
   .card-clud-custom:hover .cover img{
@@ -40,9 +42,48 @@ padding: 80px 0;
     font-size: 20px;
     margin: 0 0 20px;
   }
+.clud-date-time{
 
-  
+  font-family: 'Inter';
+  font-style: normal;
+  font-weight: 500;
+  font-size: 14px;
+  line-height: 150%;
 
-.bg-transparent{
-  color: blue;
+  color: #374151;
 }
+.club-text{
+  font-family: 'Inter';
+  font-style: normal;
+  font-weight: 500;
+  font-size: 14px;
+  line-height: 150%;
+  
+  
+  
+  color: #6B7280;
+}
+  .btn-flw{
+
+    font-family: 'Inter';
+font-style: normal;
+font-weight: 500;
+font-size: 14px;
+line-height: 150%;
+
+color: #1C64F2;
+  }
+
+  .btn-event{
+    
+    font-family: 'Inter';
+font-style: normal;
+font-weight: 500;
+font-size: 14px;
+line-height: 150%;
+/* identical to box height, or 21px */
+
+/* white */
+color: #FFFFFF;
+  }
+
