--- a/src/components/Comedian/Comedian.css
+++ b/src/components/Comedian/Comedian.css
@@ -4,17 +4,24 @@
 .card-custom-cmd{
     border: none;
     border-radius: 30px 30px 30px 30px;
-    box-shadow: 0 0  30px rgba(0,0,0,0.5);
+    
     overflow: hidden;
     
 }
 .card-img-top-custom{
     border-radius: 30px 30px 30px 30px;
-    height: 35vh;
+    height: 48vh;
 }
 
 .heading-style{
     
-    font-size: 1.5em;
-    font-weight: 700;
+    font-family: 'Inter';
+    font-style: normal;
+    font-weight: 600;
+    font-size: 24px;
+    line-height: 150%;
+    
+    text-align: center;
+    
+    color: #000000;
 }
