--- a/src/components/EventItem/EventItem.css
+++ b/src/components/EventItem/EventItem.css
@@ -1,42 +1,120 @@
-.event-item-area{
-    padding: 80px 0;
-    }
+.event-item-area {
+  padding: 80px 0;
+}
+
 .btn-custom {
- 
-    font-size: 1.5rem;
-    font-weight: 500;
-  }
 
-  .custom-circle {
-    width: 25px; 
-    height: 25px; 
-    background-color:#D9D9D9; 
-    border-radius: 50%; 
-    border: none; 
-  }
+  font-family: "Avenir Next LT Pro";
+  font-style: normal;
+  font-weight: 600;
+  font-size: 24px;
+  line-height: 29px;
+  /* identical to box height */
+  text-align: center;
 
-
-.card-custom{
-    border-radius: 20px 20px 20px 20px;
-    box-shadow: 0 0 30px rgba(0,0,0,0.5);
-    overflow: hidden;
+  color: #ffffff;
 }
-.card-img-custom{
-    border-radius: 20px 20px 0px 0px;
+/* .fa-caret-down{
+    transform: rotate(180deg);
+
+} */
+
+.custom-circle {
+  width: 20px;
+  height: 20px;
+  background-color: #d9d9d9;
+  border-radius: 50%;
+  border: none;
 }
 
+.event-club-text {
+  font-family: "Inter";
+  font-style: normal;
+  font-weight: 500;
+  font-size: 11px;
+  /* line-height: 150%; */
+  color: #111928;
+  margin-bottom: 0%;
+  margin-top: 3px;
+  
+}
+.card-body{
+  margin-top: 0;
+  padding-top:0 ;
 
+}
+.card-tit {
+  
 
+  font-family: "Inter";
+  font-style: normal;
+  font-weight: 600;
+  font-size: 16px;
+  /* line-height: 140%; */
+  /* or 25px */
+
+  color: #000000;
+}
+.pricing {
+  
+
+  font-family: "Inter";
+  font-style: normal;
+  font-weight: 600;
+  font-size: 16px;
+  /* line-height: 150%; */
+
+  color: #000000;
+}
+.date-time {
+  
+
+  font-family: "Inter";
+  font-style: normal;
+  font-weight: 500;
+  font-size: 14px;
+  line-height: 190%;
+  /* or 22px */
+
+  /* purple/700 */
+  color: #6c2bd9;
+  margin-bottom: 0;
+}
+
+.content {
+  
+
+  /* text-sm/font-normal */
+  font-family: "Inter";
+  font-style: normal;
+  font-weight: 400;
+  font-size: 14px;
+  
+  /* or 21px */
+
+  /* gray/700 */
+  color: #374151;
+}
+
+.card-custom {
+  border-radius: 20px 20px 20px 20px;
+  
+  overflow: hidden;
+}
+.card-img-custom {
+  border-radius: 20px 20px 0px 0px;
+  height: 140px;
+}
+
+.cons{
+  border: 2px solid #111928;
+}
 
 @media (max-width: 600px) {
-    
-    .card-custom{
-        margin-top: 60px;
-    }
-    .btn-custom{
-        margin-bottom: 20px;
-    }
+  .card-custom {
+    margin-top: 60px;
+  }
+  .btn-custom {
+    margin-bottom: 20px;
+  }
 }
-
-
-
