--- a/src/components/Footer/Footer.css
+++ b/src/components/Footer/Footer.css
@@ -1,3 +1,6 @@
+.area{
+  max-width: 27rem;
+}
 .menu-list {
     list-style-type: none;
     padding: 0;
@@ -6,29 +9,34 @@
     
   }
   
-  .area{
-    max-width: 19rem;
-
+  .input-group{
+color:#a98787;
   }
-  /* .form-control{
-    border: none;
-    background-color: #424d5f;
-    color:#767C8E
-    
+  .custom-input-design{
+    color: #9CA3AF;
+    box-sizing: border-box;
+    background: #374151;
+    border: 1px solid #4b5563;
+    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+    border-radius: 8px 0px 0px 8px;
+    border-left:none ;
   }
-  .form-control:hover {
+  .custom-input-design::placeholder {
+    color: #a98787;
+  }
+  .custom-input-design:focus {
+    background: #374151; 
+    outline: none; 
     border: none;
-    background-color: #424d5f;
+    box-shadow: none;
+    color: #9CA3AF;
   }
   
-  .form-control:hover:focus {
-    border: none;
-    background-color: #424d5f;
-  } */
-
+  
+ 
   .menu-list li {
     display: inline-block;
-    margin-right: 15px;
+    margin-right: 20px;
   }
   
   .menu-list li:last-child {
@@ -36,19 +44,23 @@
   }
   
   .menu-list li a {
-    color: #ffffff;
+    color:#a98787;
     text-decoration: none;
+  }
+  .costom-color{
+    color:#a98787;
+    
   }
   
   .menu-list li a:hover {
-    text-decoration: underline;
+    color: #e0c8c8;
+    
   }
-  .text-light {
-    color: #9e9393a6; /* Adjusted text color */
-  }
+  
 
   .icons{
     margin-left: 20px;
+    color: white;
   }
   
   @media (max-width: 768px) {
@@ -58,6 +70,20 @@
       margin-bottom: 10px; 
     }
   }
+  @media (max-width: 600px) {
+    .customize-mb {
+      margin-bottom: 10%;
+      text-align: center;
+    }
+  }
+  
+ 
+  
+  
+
+  
+  
+  
   
   
   
