--- a/src/components/About/About.css
+++ b/src/components/About/About.css
@@ -1,3 +1,7 @@
+.area-about{
+  margin-bottom: 7rem;
+  margin-top: 4rem;
+}
 .about-title {
   font-family: "Inter";
   font-style: normal;
@@ -31,6 +35,7 @@
   font-weight: 500;
   font-size: 16px;
   line-height: 150%;
+  padding: 0.6%;
 
   color: #000000;
 }
