--- a/src/index.css
+++ b/src/index.css
@@ -11,7 +11,7 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
-*, p, div, h1{
+*{
   margin:0;
   padding:0;
 }
